<resources>
    <string name="app_name">LifeMelody</string>
    <string name="welcome_title">¡Bienvenido a Life Melody!</string>
    <string name="app_description">Reproduce tu música local.</string>
    <string name="privacy_ads_title">Anuncios</string>
    <string name="privacy_ads_description">Para mantener esta aplicación gratuita, mostramos publicidad proporcionada por Huawei Ads, Google AdMob y Meta Ads. Estos anuncios pueden ser personalizados según tu actividad para ofrecerte contenido relevante y una mejor experiencia. Al continuar, confirmas que has leído nuestras políticas y aceptas el uso de tus datos para este fin.</string>
    <string name="privacy_link">Ver nuestra Política de Privacidad</string>
    <string name="terms_link">Leer los Términos y Condiciones</string>
    <string name="accept_button">Aceptar y Continuar</string>
    <string name="reject_button">Rechazar anuncios personalizados</string>
    <string name="titulo_cancion">Nombre de la Canción</string>
    <string name="nombre_artista">Artista</string>
    <string name="reproductor">Reproductor</string>
    <string name="menu_music">Música</string>
    <string name="menu_player">Player</string>
    <string name="menu_top">Top</string>
    <string name="settings_title">Ajustes</string>
    <string name="contact_label">Contacto</string>
    <string name="contact_email">soportlifemelody@gmail.com</string>
    <string name="terms_and_conditions">Términos y Condiciones</string>
    <string name="privacy_policy">Políticas de Privacidad</string>
    <string name="save_color">Guardar Color</string>
    <string name="icon_color_button_text">Color de Íconos</string>
    <string name="gradient_background_button_text">Fondo Degradado</string>
    <string name="no_seleccionar">No puedes seleccionar el color blanco para el ícono.</string>
    <string name="seleccionar_icono">Seleccionar Icono</string>
    <string name="equalizer_title">Ecualizador</string>
    <string name="reset_button">Restablecer</string>
    <string name="sleep_timer_title">Temporizador de sueño</string>
    <string name="option_treinta_minutes">Treinta Minutos</string>
    <string name="option_dos_hours">Dos Horas</string>
    <string name="option_tres_hours">Tres Horas</string>
    <string name="option_cancel_timer">Cancelar Temporizador</string>
    <string name="timer_set_confirmation">Temporizador fijado para %d minutos.</string>
    <string name="timer_cancel_confirmation">Temporizador de apagado cancelado.</string>
    <string name="donate_label">Apoya el desarrollo de la app</string>
    <string name="acceptance_title">Aceptación de Terminos y Politicas</string>
    <string name="accept_terms_checkbox">He leído y acepto las Políticas de Privacidad y los Términos y Condiciones.</string>
    <string name="continue_button">Continuar</string>
    <string name="accept_personalized_ads">Aceptar Anuncios Personalizados</string>
    <string name="reject_personalized_ads">Rechazar Personalización</string>
    <string name="decline_and_exit_button">Rechazar y Salir</string>
    <string name="option_diez_minutes">Diez minutos</string>
    <string name="option_veinte_minutes">Veinte minutos</string>
    <string name="personalization_settingstwo">Personalización</string>
    <string name="top_songs">Mas Escuchadas</string>
    <string name="mi_musica">Mi Musica</string>
    <string name="favoritos">Favoritos</string>
    <string name="personalization_settings">Personalización</string>
    <string name="canciones_favoritas">Favoritos</string>
    <string name="seleccionar_modo">Seleccionar Tema</string>
    <string name="menu_settings">Ajustes</string>
    <string name="videos_empty_message">Puedes agregar videos musicales desde tu dispositivo local</string>
    <string name="volumen_title">Volumen</string>
    <string name="dialog_delete_title">Quitar de la lista</string>
    <string name="dialog_delete_positive">Aceptar</string>
    <string name="dialog_delete_negative">Cancelar</string>
    <string name="mis_videos">Mis Videos</string>
    <string name="videos">Videos</string>
    <string name="selecciona_color">Seleciona El Color</string>
    <string name="toast_favorite_video_restriction">Solo las canciones pueden ser marcadas como favoritas.</string>
    <string name="ads_settings_title">Ajustes de Anuncios</string>
    <string name="ads_personalized_label">Anuncios Personalizados</string>
    <string name="ads_personalized_description">Basados en tus intereses y actividad.</string>
    <string name="ads_non_personalized_label">Anuncios No Personalizados</string>
    <string name="ads_non_personalized_description">Anuncios genéricos (menos relevantes).</string>
    <string name="ads_privacy_info_footer">Puedes cambiar tus preferencias en cualquier momento en estos ajustes. Utilizamos identificadores de dispositivo para personalizar los anuncios y analizar el tráfico según nuestra Política de Privacidad.</string>
    <string name="ads_btn_save">Guardar Cambios</string>
    <string name="settings_updated">Configuración actualizada</string>
    <string name="no_se_encontraron_canciones">No se encontraron archivos de música local en este dispositivo.</string>
    <string name="hint_remove_song">Mantén presionada una canción para ver opciones.</string>
    <string name="error_permiso_almacenamiento">Se requiere permiso de almacenamiento para mostrar tu música local. \n\n Toca aquí para configurar los permisos.</string>
    <string name="volume_warning">Ten cuidado con los niveles altos de volumen. Mantener la escucha prolongada a máxima potencia puede afectar tu salud auditiva.</string>
    <string name="legal">Información</string>
    <string name="preferencias">Preferencias</string>
    <string name="text_select">Seleccionar</string>
    <plurals name="songs_selected_count">
        <item quantity="one">%1$d seleccionada</item>
        <item quantity="other">%1$d seleccionadas</item>
    </plurals>

    <string name="sort_by_recent">Ordenado por recientes</string>
    <string name="sort_by_alpha">Ordenado de A-Z</string>
    <string name="save_change">Guardar Cambios</string>
    <string name="title_select_playlist">Seleccionar Playlist</string>
    <string name="action_create_new_list">+ Crear Nueva Lista</string>
    <string name="title_new_playlist">Nueva Playlist</string>
    <string name="action_create">Crear</string>
    <string name="action_cancel">Cancelar</string>
    <string name="playlists">Mis Playlists</string>
    <string name="title_customize_list">Personalizar Lista</string>
    <string name="hint_playlist_name">Nombre</string>
    <string name="label_choose_icon">Elige un icono</string>
    <string name="action_save_changes">Guardar Cambios</string>
    <string name="empty_playlist_message">Esta lista está vacía</string>
    <string name="no_playlists_message">No tienes listas creadas</string>
    <string name="toast_songs_added">Canciones añadidas</string>
    <string name="toast_list_created">Lista \"%s\" creada</string>
    <string name="lists">Listas</string>
    <string name="hint_remove_lists">Mantén presionada una lista para ver opciones.</string>
    <string name="support_ad_label">Apóyanos (Ver un anuncio)</string>
    <string name="no_songs_found">No se encontraron canciones</string>
    <string name="scan_device_hint">Escanea tu dispositivo para encontrar archivos de audio</string>
    <string name="empty_favorites_message">Aquí aparecerán tus canciones favoritas.</string>
    <string name="top_ten_empty_message">¡Aún no hay Top 10!</string>
    <string name="create_playlist_hint">Crea una nueva lista para empezar</string>
    <string name="top_songs_empty_hint">Tus canciones más escuchadas aparecerán aquí</string>
    <string name="favorites_empty_hint">Marca tus canciones con un corazón para verlas aquí</string>
    <string name="add_videos_hint">Toca el botón "+" para añadir tus videos favoritos</string>
    <string name="preset_normal">Normal</string>
    <string name="preset_pop">Pop</string>
    <string name="preset_rock">Rock</string>
    <string name="preset_jazz">Jazz</string>
    <string name="preset_classical">Clásica</string>
    <string name="preset_reggaeton">Reggaeton</string>
    <string name="preset_electronic">Electrónica</string>
    <string name="preset_hiphop">Hip Hop</string>
    <string name="visual_animations">Animaciones visuales</string>


</resources>