<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/musicaFragment"
        android:icon="@drawable/ic_note"
        android:title="@string/menu_music"
        android:iconTint="#C34B92"/>

    <item
        android:id="@+id/reproductorFragment"
        android:icon="@drawable/ic_recoring"
        android:title="@string/menu_player"
        android:iconTint="#C34B92"/>
    <item
        android:id="@+id/topFragment"
        android:icon="@drawable/ic_top"
        android:title="@string/menu_top"
        android:iconTint="#C34B92"/>

    <item
        android:id="@+id/configFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/lists"
        android:iconTint="#C34B92"/>

</menu>